# BentoCrypt

./: .gitignore  Makefile  README.md
bento/rust/src/: lib.rs
bento_utils/src/: disk.rs  lib.rs
bentofs/: README.md
datablock-rs/: README.md
datablock-rs/datablock/src/: datablock.rs  lib.rs
datablock-rs/datablock_test/src/: main.rs
encryption/: Cargo.toml
encryption/src/: encrypt.rs  lib.rs  main.rs
encryption_kernel/: .Cargo.toml.swp  Makefile
encryption_kernel/src/: lib.rs  masterkey.rs  util.rs
encryption_test/: Cargo.toml
encryption_test/src/: main.rs
encryption_tests/: Cargo.toml
encryption_tests/src/: main.rs
encryption_userspace/: Cargo.toml
encryption_userspace/src/: lib.rs  masterkey.rs
pwd/: Cargo.toml  Makefile  password.c
pwd/src/: .util.rs.rustfmt  main.rs  pwd.rs  util.rs
rust/: Cargo.toml  Makefile
rust/kernel/: Cargo.toml  Kbuild  README.md
rust/kernel/src/: README.md  lib.rs  main.rs  masterkey.rs
rust/src/: Makefile  encrypt.rs  main.rs  masterkey.rs  util.rs  xv6fs_fs.rs  xv6fs_ll.rs
rust/src/xv6fs/: xv6fs_file.rs  xv6fs_ll.rs
rust/userspace/: README.md
xv6fs_encrypted/: README.md
xv6fs_encrypted/mkfs/: Makefile
xv6fs_encrypted/rust/kernel/: Cargo.toml
xv6fs_encrypted/rust/src/: xv6fs_ll.rs  xv6fs_log.rs
xv6fs_encrypted/rust/userspace/: Cargo.toml
xv6fs_encrypted/rust/userspace/src/: main.rs
