[package]
name = "encryption"
version = "0.1.0"
authors = ["Prathik Gowda <gowdapra@grinnell.edu>",
	  "John Chandy <jchandy@alum.mit.edu>"]
edition = "2018"

[lib]
name = "encryption"
path = "src/lib.rs"

[dependencies]
aes-gcm       = "0.9.2"
arr_macro     = "0.1.0"
generic-array = "0.14.4"
hex           = "0.4.3"
hash32        = "0.1.1"
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
rand          = "0.8.4"
rand_core     = "0.6.3"

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
