[package]
name    = "encryption"
version = "0.1.0"
authors = ["Prathik Gowda <gowdapra@grinnell.edu>",
	  "John Chandy <jchandy@alum.mit.edu>"]
edition = "2018"

[lib]
name = "encryption"
path = "src/lib.rs"

[dependencies.aes-gcm]
version          = "0.9.2"
default-features = false
features         = ["alloc", "aes"]

[dependencies.generic-array]
version          = "0.14.4"
default-features = false

[dependencies.getrandom]
version          = "0.2.3"
default-features = false
features         = ["rdrand"]

[dependencies.hex]
version          = "0.4"
default-features = false
features         = ["alloc"]

[dependencies.no-std-compat]
version          = "0.4.1"
default-features = false
features         = ["alloc"]

[dependencies.rand]
version          = "0.8.4"
default-features = false
features         = ["alloc", "getrandom"]

[dependencies.rand_core]
version          = "0.6.3"
default-features = false
features         = ["alloc", "getrandom"]
