[package]
name = "bento_crypt"
version = "0.1.0"
authors = ["Danyang Zhuo <danyangz@cs.washington.edu>",
           "Kaiyuan Zhang <kaiyuanz@cs.washington.edu>",
           "Samantha Miller <sm237@cs.washington.edu>",
	   "Prathik Gowda <gowdapra@grinnell.edu>",
	   "John Chandy <jchandy@alum.mit.edu>"]
edition = "2018"

[dependencies]
aes-gcm = "0.9.2"
arr_macro = "0.1.0"
hash32 = "0.1.1"
rand = "0.8.4"
rand_core = "0.6.3"

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]
